--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
@@ -11,6 +12,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.1",
     "base64-sol": "^1.1.0",
+    "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
     "global": "^4.4.0",
     "hardhat-deploy": "^0.9.14",
