--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hardhat": "^2.8.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.3.0",
     "@openzeppelin/contracts": "^4.4.1",
     "base64-sol": "^1.1.0",
     "dotenv": "^10.0.0",
